--- a/css/style.css
+++ b/css/style.css
@@ -256,12 +256,13 @@ h1 {
   margin: 0;
   padding: 5px;
   text-align: center;
-  font-size: 60px;
+  font-size: 80px;
 }
 
 p {
   padding:0;
   margin:0;
+  font-size: 30px;
 }
 
 .description {
@@ -271,6 +272,8 @@ p {
 .item-webstack {
   border: solid;
   padding:10px;
+  font-size: 25px;
+  background-color: #232323;
 }
 
 ul,li {
@@ -288,7 +291,11 @@ a {
   justify-content: center;
 }
 
+.github-wrapper {
+  display:flex;
+  justify-content: center;
+}
 .github-button {
-  margin-left:auto;
-  margin-right:auto;
+  margin-left:50%;
+  margin-right:50%;
 }
