--- a/css/style.css
+++ b/css/style.css
@@ -227,11 +227,11 @@ a:hover
 }
 
 .portfolio-item {
-  /* background-color: grey; */
+  background-color: grey;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   display: flex;
-  flex-grow: 1;
+  /* flex-grow: 1; */
   max-height: 1000px;
   min-width: 800px;
   max-width: 800px;
@@ -239,16 +239,26 @@ a:hover
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
+  padding: 20px;
 }
 
 .portfolio-item-left-container {
-  background-color: grey;
+  /* background-color: grey; */
   flex-basis: 100%;
+  min-width: 800px;
+  min-height: 400px;
+  background-image: url(../images/walkme.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .portfolio-item-right-container {
   /* background-color: #6d416a; */
   flex-basis: 100%;
+  display:flex;
+  flex-direction: column;
+  margin-top: 20px;
 
 }
 
@@ -295,7 +305,31 @@ a {
   display:flex;
   justify-content: center;
 }
-.github-button {
-  margin-left:50%;
-  margin-right:50%;
+
+
+.git-icon {
+  width: 60px;
+  background-image: url(../images/GitHub-Mark-Light-120px-plus.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.git-text {
+  margin-top: 6px;
+  font-size: 40px;
+}
+
+@media screen and (min-width: 1224px) {
+  .portfolio-item {
+    flex-wrap: nowrap;
+    margin: 0px;
+    max-width: 1500px;
+  }
+
+  .portfolio-container {
+    align-items: center;
+    margin: 20px;
+  }
+
 }
