trying image fix

--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,9 @@ a:hover
   min-width: 800px;
   min-height: 400px;
   background-image: url(../images/walkme.png);
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
