--- a/css/style.css
+++ b/css/style.css
@@ -209,8 +209,8 @@ a:hover
 }
 
 .section3 {
-  /* width: 100vw;
-  height: 200vh; */
+  width: 100vw;
+  /* height: 200vh; */
   display:flex;
   background-color: #1c1c1c;
 }
@@ -232,9 +232,9 @@ a:hover
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   display: flex;
   /* flex-grow: 1; */
-  max-height: 1000px;
+  /* max-height: 1000px;
   min-width: 800px;
-  max-width: 800px;
+  max-width: 800px; */
   flex-wrap: wrap;
   margin-left: auto;
   margin-right: auto;
@@ -324,6 +324,17 @@ a {
   font-size: 40px;
 }
 
+a.anchor {
+  display: block;
+  position: relative; 
+  top: 880px; 
+  visibility: hidden;
+}
+
+.icon-size {
+  font-size: 100px;
+}
+
 @media screen and (min-width: 1224px) {
   .portfolio-item {
     flex-wrap: nowrap;
@@ -346,6 +357,10 @@ a {
   .portfolio-item-left-container {
     min-width: 0px;
     min-height: 0px;
+  }
+
+  a.anchor {
+    top: 350px; 
   }
   
 }
