--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .section1 {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: #1c1c1c;
   display:flex;
@@ -26,12 +26,20 @@ body {
 }
 
 .section2 {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: #342525;
 }
+
+.section3 {
+  width: 100%;
+  /* height: 200vh; */
+  display:flex;
+  background-color: #1c1c1c;
+}
+
 .section4 {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: #342525;
 }
@@ -208,13 +216,6 @@ a:hover
   /* background-color: mintcream; */
 }
 
-.section3 {
-  width: 100vw;
-  /* height: 200vh; */
-  display:flex;
-  background-color: #1c1c1c;
-}
-
 .portfolio-title {
   font-size: 60px;
 }
@@ -224,6 +225,7 @@ a:hover
   width: 100%;
   display:flex;
   flex-direction: column;
+  /* background-color: #6d416a; */
 }
 
 .portfolio-item {
@@ -245,8 +247,9 @@ a:hover
 
 .portfolio-item-left-container {
   /* background-color: grey; */
+  display: inline-block;
   flex-basis: 100%;
-  min-width: 800px;
+  /* min-width: 800px; */
   min-height: 400px;
   background-image: url(../images/walkme.png);
   -webkit-background-size: contain;
@@ -300,7 +303,7 @@ a {
 }
 
 .portfolio-item-webstack {
-  display:flex;
+  display: flex;
   padding: 5px;
   justify-content: center;
 }
@@ -309,7 +312,6 @@ a {
   display:flex;
   justify-content: center;
 }
-
 
 .git-icon {
   width: 60px;
