--- a/css/style3.css
+++ b/css/style3.css
@@ -89,8 +89,6 @@ main {
   /* font-size: 1.1em; */
 }
 
-
-
 .pictureofme {
   background-image: url("../images/Aar1.jpg");
   background-position: center;
@@ -144,12 +142,19 @@ main {
   margin-bottom: 20px;
 
 }
+
+#googleMap {
+  cursor: pointer;
+  width:100%;
+  height:400px;
+}
+
 @media screen and (min-width:830px) {
   body {
     flex-direction: row;
   }
   nav {
-    background-color: #6d416a;
+    background-color: blue;
   }
   .nav-container {
     display: flex;
