--- a/css/style3.css
+++ b/css/style3.css
@@ -104,6 +104,15 @@ main {
   width: 100%;
   height: 100%;
 }
+
+.maps-overlay {
+  background-color: rgba(28, 28, 28, 0.3);
+  position: absolute;
+  z-index: -2;
+  width:100%;
+  height:400px;
+}
+
 .aboveoverlay {
   position: relative;
   z-index: 3;
@@ -144,7 +153,9 @@ main {
 }
 
 #googleMap {
-  cursor: pointer;
+  cursor: pointer !important;
+  position: absolute;
+  z-index: -3;
   width:100%;
   height:400px;
 }
