--- a/css/style3.css
+++ b/css/style3.css
@@ -5,11 +5,9 @@
 
 html {
   box-sizing: border-box;
-  -webkit-text-size-adjust: none;
-  -ms-text-size-adjust: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  font-size: 1em;
+  font-size: 1rem;
   width: 100%;
   font-family: "Josefin Sans", sans-serif;
   color: white;
@@ -23,6 +21,11 @@ ul,li {
 
 a {
   text-decoration: none;
+  color:white;
+}
+
+a:hover {
+  color: grey;
 }
 
 p {
@@ -46,6 +49,7 @@ body {
 nav {
   background-color: #6d416a;
   flex-basis: 25%;
+  box-shadow: 0px 5px 4px -4px #000000;
 }
 
 .nav-container {
@@ -77,17 +81,17 @@ main {
   background-color: slateblue;
 }
 
-#contact {
+/* #contact {
   background-color: darkmagenta;
-}
+} */
 
 .full-height {
   height: 100vh;
 }
 
-.aboutme-text {
-  /* font-size: 1.1em; */
-}
+/* .aboutme-text {
+  font-size: 1.1em;
+} */
 
 .pictureofme {
   background-image: url("../images/Aar1.jpg");
@@ -124,18 +128,21 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  flex-wrap: nowrap;
+
 }
 
 .name {
   margin-top: 100px;
   align-self: center;
   font-weight: bold;
-  font-size: 3em;
+  font-size: 3rem;
+
 }
 .title {
   align-self: center;
   font-weight: lighter;
-  font-size: 1em;
+  font-size: 1rem;
 
 }
 
@@ -146,14 +153,13 @@ main {
 .container-aboutme {
   margin-left: 0px;
   margin-right: 0px;
-  line-height: 1.4em;
+  line-height: 1.4rem;
   margin-top: 20px;
   margin-bottom: 20px;
 
 }
 
 #googleMap {
-  cursor: pointer !important;
   position: absolute;
   z-index: -3;
   width:100%;
@@ -173,11 +179,11 @@ main {
     justify-content: initial;
   }
  .name {
-  font-size: 6em;
+  font-size: 6rem;
   margin-top: 200px;
  }
  .title {
-  font-size: 1.5em;
+  font-size: 1.5rem;
  }
  .pictureofme {
   background-image: url("../images/Aar1.jpg");
@@ -196,4 +202,14 @@ main {
   /* margin-bottom: 20px; */
 }
 
+}
+
+@media screen and (min-width:410px) {
+  .name {
+    font-size: 5rem;
+    margin-top: 100px;
+   }
+   .title {
+    font-size: 1.5rem;
+   }
 }
