--- a/css/style3.css
+++ b/css/style3.css
@@ -1,10 +1,10 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   }
 
 html {
-  box-sizing: border-box;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   font-size: 1rem;
@@ -29,7 +29,9 @@ a:hover {
 }
 
 p {
-  padding: 10px;
+  padding: 7px;
+  line-height: 1.4rem;
+  text-align: center;
 }
 
 h3 {
@@ -37,7 +39,6 @@ h3 {
 	margin-top: 0;
   text-transform: uppercase;
   padding: 20px 30px;
-  /* margin-bottom: 40px; */
   background-color: #467c76;
 }
 
@@ -47,9 +48,9 @@ body {
 }
 
 nav {
-  background-color: #6d416a;
+  background-color: #7c4c78;
   flex-basis: 25%;
-  box-shadow: 0px 5px 4px -4px #000000;
+ 
 }
 
 .nav-container {
@@ -57,41 +58,92 @@ nav {
   justify-content: space-around;
   align-self: center;
   height: 50px;
+  position: relative;
 }
 
 main {
-  background-color: aquamarine;
   flex-basis: 75%;
   display:flex;
   flex-direction: column;
 }
 
-#hero {
-  background-color: #1c1c1c;
-  
-}
-
 #aboutme {
+  background-color: #1c1c1c;  
+}
+
+#portfolio {
   background-color: #1c1c1c;
-  /* background-color: rgba(52,37,37); */
-  
 }
 
-#projects {
-  background-color: slateblue;
+.portfolio {
+  background: #1c1c1c;
+
 }
 
-/* #contact {
-  background-color: darkmagenta;
-} */
+hr {
+  border-width: 1px;
+  width: 40px;
+  margin-top:10px;
+}
+
+.info-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
+
+.portfolio .info-container p {
+  font-size: 1.125em;
+  width: 100%;
+  margin-left: 0;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
 
 .full-height {
   height: 100vh;
 }
 
-/* .aboutme-text {
-  font-size: 1.1em;
-} */
+.button {
+  text-transform: uppercase;
+  border: 2px solid #7c4c78;
+  padding: 5px;
+  margin: 0 auto;
+  text-align: center;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-transition: background-color 0.5s ease-in-out, 1s;
+  -moz-transition: background-color 0.5s ease-in-out, 1s;
+  -o-transition: background-color 0.5s ease-in-out, 1s;
+  transition: background-color 0.5s ease-in-out, 1s;
+  text-decoration: none; }
+
+.on-behance {
+  text-decoration: none;
+  width: 16%;
+  margin: 1.875em 0 3.75em 0;
+  padding: .5em 1em;
+  font-size: 0.875em; 
+}
+
+.portfolio .info-container .button:hover {
+  background-color: white;
+  color: #7c4c78; 
+}
+
+.portfolio figure {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.portfolio img {
+  max-width: 100%;
+}
 
 .pictureofme {
   background-image: url("../images/Aar1.jpg");
@@ -123,13 +175,11 @@ main {
 }
 
 .name-title-container {
-  /* background-color: hotpink; */
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   flex-wrap: nowrap;
-
 }
 
 .name {
@@ -137,13 +187,12 @@ main {
   align-self: center;
   font-weight: bold;
   font-size: 3rem;
-
 }
+
 .title {
   align-self: center;
   font-weight: lighter;
   font-size: 1rem;
-
 }
 
 .align-center {
@@ -156,7 +205,6 @@ main {
   line-height: 1.4rem;
   margin-top: 20px;
   margin-bottom: 20px;
-
 }
 
 #googleMap {
@@ -164,44 +212,6 @@ main {
   z-index: -3;
   width:100%;
   height:400px;
-}
-
-@media screen and (min-width:830px) {
-  body {
-    flex-direction: row;
-  }
-  nav {
-    background-color: blue;
-  }
-  .nav-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: initial;
-  }
- .name {
-  font-size: 6rem;
-  margin-top: 200px;
- }
- .title {
-  font-size: 1.5rem;
- }
- .pictureofme {
-  background-image: url("../images/Aar1.jpg");
-  background-position: initial;
-  background-origin: border-box;
-  position: relative;
-  background-size: cover;
-  overflow: hidden;
-  background-repeat: no-repeat;
-}
-
-.container-aboutme {
-  margin-left: 80px;
-  margin-right: 80px;
-  /* margin-top: 20px; */
-  /* margin-bottom: 20px; */
-}
-
 }
 
 @media screen and (min-width:410px) {
@@ -212,4 +222,37 @@ main {
    .title {
     font-size: 1.5rem;
    }
+}
+
+@media screen and (min-width:761px) {
+  
+  .pictureofme {
+    background-image: url("../images/metest.jpg");
+    background-position: center;
+    position: relative;
+    background-size: cover;
+    overflow: hidden;
+    background-repeat: no-repeat;
+  }
+
+  .name {
+    font-size: 6rem;
+    margin-top: 200px;
+  }
+
+  .title {
+    font-size: 1.5rem;
+  }
+
+  .container-aboutme {
+    margin-left: 80px;
+    margin-right: 80px;
+  }
+
+  .info-container {
+    margin: 20px;
+    margin-left: 80px;
+    margin-right: 80px;
+  }
+  
 }
