--- a/css/style3.css
+++ b/css/style3.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  }
+}
 
 html {
   text-rendering: optimizeLegibility;
@@ -13,7 +13,8 @@ html {
   color: white;
 }
 
-ul,li {
+ul,
+li {
   list-style-type: none;
   padding: 0;
   margin: 0;
@@ -21,7 +22,7 @@ ul,li {
 
 a {
   text-decoration: none;
-  color:white;
+  color: white;
 }
 
 a:hover {
@@ -35,8 +36,8 @@ p {
 }
 
 h3 {
-	font-weight: 200;
-	margin-top: 0;
+  font-weight: 200;
+  margin-top: 0;
   text-transform: uppercase;
   padding: 20px 30px;
   background-color: #467c76;
@@ -50,7 +51,6 @@ body {
 nav {
   background-color: #7c4c78;
   flex-basis: 25%;
- 
 }
 
 .nav-container {
@@ -63,12 +63,12 @@ nav {
 
 main {
   flex-basis: 75%;
-  display:flex;
+  display: flex;
   flex-direction: column;
 }
 
 #aboutme {
-  background-color: #1c1c1c;  
+  background-color: #1c1c1c;
 }
 
 #portfolio {
@@ -77,13 +77,12 @@ main {
 
 .portfolio {
   background: #1c1c1c;
-
 }
 
 hr {
   border-width: 1px;
   width: 40px;
-  margin-top:10px;
+  margin-top: 10px;
 }
 
 .info-container {
@@ -121,19 +120,20 @@ hr {
   -moz-transition: background-color 0.5s ease-in-out, 1s;
   -o-transition: background-color 0.5s ease-in-out, 1s;
   transition: background-color 0.5s ease-in-out, 1s;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .on-behance {
   text-decoration: none;
   width: 16%;
   margin: 1.875em 0 3.75em 0;
   padding: .5em 1em;
-  font-size: 0.875em; 
+  font-size: 0.875em;
 }
 
 .portfolio .info-container .button:hover {
   background-color: white;
-  color: #7c4c78; 
+  color: #7c4c78;
 }
 
 .portfolio figure {
@@ -165,8 +165,8 @@ hr {
   background-color: rgba(28, 28, 28, 0.3);
   position: absolute;
   z-index: -2;
-  width:100%;
-  height:400px;
+  width: 100%;
+  height: 400px;
 }
 
 .aboveoverlay {
@@ -211,12 +211,12 @@ hr {
 #googleMap {
   position: absolute;
   z-index: -3;
-  width:100%;
-  height:400px;
+  width: 100%;
+  height: 400px;
 }
 
 .ts-background {
- background-color: rgb(41, 41, 41);
+  background-color: rgb(41, 41, 41);
 }
 
 .margin-top {
@@ -231,25 +231,50 @@ hr {
 
 .contact-info-container {
   background-color: rgb(41, 41, 41, .8);
-  flex-basis: 60%;
-  display:flex;
+  flex-basis: 100%;
+  display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
+.circle-style {
+  color: #7c4c78;
+}
+
+.icon-style {
+  font-size: 30px;
+  margin: 5px;
+}
+
+.contact-info-container li {
+  display: flex;
+  align-items: center;
+}
+
+.contact-line a {
+  padding: 20px;
+}
+
+.center-list {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.center-list li a {
+  font-size: 1.3em;
+}
 
 @media screen and (min-width:410px) {
   .name {
     font-size: 5rem;
     margin-top: 100px;
-   }
-   .title {
+  }
+  .title {
     font-size: 1.5rem;
-   }
+  }
 }
 
 @media screen and (min-width:761px) {
-  
   .pictureofme {
     background-image: url("../images/metest.jpg");
     background-position: center;
@@ -258,25 +283,31 @@ hr {
     overflow: hidden;
     background-repeat: no-repeat;
   }
-
   .name {
     font-size: 6rem;
     margin-top: 200px;
   }
-
   .title {
     font-size: 1.5rem;
   }
-
   .container-aboutme {
     margin-left: 80px;
     margin-right: 80px;
   }
-
   .info-container {
     margin: 20px;
     margin-left: 80px;
     margin-right: 80px;
   }
-  
+  .contact-info-container {
+    display: flex;
+    
+  }
+  .center-list {
+    display: flex;
+    margin-left: 0;
+    margin-right: 0;
+    justify-content: space-evenly;
+  }
+
 }
