--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,9 @@ hr {
   font-size: 1.3em;
 }
 
+#cata {
+  padding-top: 5px;
+}
 @media screen and (min-width:410px) {
   .name {
     font-size: 5rem;
